# stitchjob

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  latex.py  patchworker.cls  patchworker.py  pyproject.toml  rb-resume.cls  stitch_letter.py  stitch_resume.py  template.tex  xmlresume.py
letter/: .clean-keep  example.md  example.tex  template.mako
resume/: .clean-keep  example.tex  example.xml  resume.dtd  resume.rnc  schemas.xml  stitched.cls  template.xml
stitchjob/: latex.py  letter.mako  shared.py  stitch.py  stitch_letter.py  stitch_resume.py  stitched.cls
tests/: conftest.py  test_cli.py  test_latex.py  test_shared.py  test_stitch.py  test_stitch_letter.py  test_stitch_resume.py
tests/data/: resume.xml
